Answering questions that came up while reviewing today.

--- a/java/Classes.ipynb
+++ b/java/Classes.ipynb
@@ -2912,9 +2912,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "edb79503",
+   "metadata": {},
+   "source": [
+    "# Serializable\n",
+    "\n",
+    "`java.io.Serializable` built-in interface.\n",
+    "\n",
+    "It is a __marker interface__ like `Cloneable` is.  It used used by built-ins like `ArrayList` and `Enum`.\n",
+    "\n",
+    "It is aided by the `transient` keyword for marking a member as non-serialized.\n",
+    "\n",
+    "Note: __subclasses__ of a serializable class will be serializable too, but the c'tor of the __base__ should have __no arguments__ or you might run into issues.\n",
+    "\n",
+    "Note: you have to be careful about deserializing because data could be crafted to cause a crash in deserialization or something like that.  This kind of thing is why specialized libraries like for JSON are preferred.\n",
+    "\n",
+    "To further customize the serialization/deseralization process, you can provide private `writeObject` and `readObject` methods on your class, which are not part of `Object` but are still understood by Java seralization.\n",
+    "\n",
+    "`readResolve` is another such method that can be used to control which exact reference (eg. for a singleton) is returned from deserialization.  Effective Java recommends using an enum instead."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e72a87be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.io.Serializable;\n",
+    "import java.io.ObjectOutputStream;\n",
+    "import java.io.FileOutputStream;\n",
+    "import java.io.ObjectInputStream;\n",
+    "import java.io.FileInputStream;\n",
+    "\n",
+    "public class Person implements Serializable {\n",
+    "    // Recommended to include to avoid auto-generated one\n",
+    "    // that might mismatch between versions.\n",
+    "    private static final long serialVersionUID = 1L;\n",
+    "\n",
+    "    private String name;\n",
+    "    private int age;\n",
+    "    \n",
+    "    // Use this keyword to avoid serialization of a field.\n",
+    "    private transient String someField;\n",
+    "\n",
+    "    public Person(String name, int age) {\n",
+    "        this.name = name;\n",
+    "        this.age = age;\n",
+    "    }\n",
+    "\n",
+    "    public String getName() { return name; }\n",
+    "}\n",
+    "\n",
+    "class SerializableDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        try (ObjectOutputStream out = new ObjectOutputStream(new FileOutputStream(\"person.ser\"))) {\n",
+    "            Person person = new Person(\"John\", 25);\n",
+    "            out.writeObject(person);\n",
+    "        } catch (IOException e) {\n",
+    "            e.printStackTrace();\n",
+    "        }\n",
+    "        \n",
+    "        try (ObjectInputStream in = new ObjectInputStream(new FileInputStream(\"person.ser\"))) {\n",
+    "            Person deserializedPerson = (Person) in.readObject();\n",
+    "            System.out.println(deserializedPerson.getName());  // Outputs: John\n",
+    "        } catch (IOException | ClassNotFoundException e) {\n",
+    "            e.printStackTrace();\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "SerializableDemo.main(null);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6c5bff5",
+   "id": "6eb8a174",
    "metadata": {},
    "outputs": [],
    "source": []
