--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -1902,9 +1902,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0bc04972",
+   "metadata": {},
+   "source": [
+    "# Functional Optional Members\n",
+    "\n",
+    "Besides being able to call `o.stream()` on an `Optional<T>`, you have the following members:\n",
+    "  - `filter`, `flatMap`, `map` which will get a new `Optional` with a transformed value if appropriate (or empty)\n",
+    "  - `ifPresent(consumer)` to perform an action based on a value only if there\n",
+    "    - `ifPresentOrElse(consumer, runnable)`\n",
+    "  - `orElse` has several variants (eg. `orElseThrow()`, `orElseGet(supplier)`, etc."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "034fdc71",
+   "id": "a6a5c1fe",
    "metadata": {},
    "outputs": [],
    "source": []
