--- a/java/Functions.ipynb
+++ b/java/Functions.ipynb
@@ -184,7 +184,9 @@
     "\n",
     "In the `main` method, we demonstrate the usage of both methods by calling them with different combinations of arguments. We show calling the `greet` method with only the required argument, with both the required and optional arguments, and calling the `greetWithDefault` method with only the required argument and with both the required and default arguments. The expected output is mentioned as comments next to each method call.\n",
     "\n",
-    "Note: another useful method of `Optional<T>` is `T orElse(T other)` as a way to __coalesce__."
+    "Note: another useful method of `Optional<T>` is `T orElse(T other)` as a way to __coalesce__.\n",
+    "\n",
+    "You can use `OptionalInt` and similar for __primitive values__."
    ]
   },
   {
