--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -254,7 +254,7 @@
     "1. `OutputStream` is similiar but for binary.\n",
     "1. `InputStream` is similar but for binary.\n",
     "\n",
-    "Note: there is also `FileReader` and `FileWriter` that take paths, which looks more like how you do __User Input__ above."
+    "Note: there is also `FileReader` and `FileWriter` that take paths, which looks more like how you do __User Input__ above.  Also `FileInputStream` and `FileOutputStream`."
    ]
   },
   {
@@ -728,6 +728,18 @@
     "As in the example above, you should catch it anytime you wait, sleep, etc.\n",
     "\n",
     "NOTE: `supplyAsync` takes a `Supplier<T>`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0eb62b70",
+   "metadata": {},
+   "source": [
+    "# Thread Priorities\n",
+    "\n",
+    "`thread.setPriority(int)` can be used to set the priority of a thread (if the thread has permission to set the permissions of the other thread). You can use the constants `Thread.NORM_PRIORITY` (5), `Thread. MIN_PRIORITY` (1), and `Thread.MAX_PRIORITY` (10).\n",
+    "\n",
+    "You can use `thread.getPriority()` to get the current priority."
    ]
   },
   {
@@ -1562,7 +1574,13 @@
     "The abstract base class of `RecursiveTask` and `RecursiveAction` is `ForkJoinTask`.\n",
     "\n",
     "NOTE: `compute()` is not on `ForkJoinTask` - that is why it's able to be void in `RecursiveAction`.\n",
-    "NOTE: `join()` does not throw any checked exceptions. It will rethrow any unchecked exceptions up to the top-level of the computation."
+    "NOTE: `join()` does not throw any checked exceptions. It will rethrow any unchecked exceptions up to the top-level of the computation.\n",
+    "\n",
+    "`ForkJoinTask` itself has __static methods__ to get tasks so you don't have to extend classes if you don't need the verbosity:\n",
+    "  - `ForkJoinTask.adapt(() -> 10)` gets a task that will return 10 on `task.join()` just like `RecursiveTask`.\n",
+    "      - checked exceptions become `RuntimeException`\n",
+    "  - `ForkJoinTask.adapt(runnable)` is equivalent to implementing a `RecursiveAction`\n",
+    "  - `ForkJoinTask.adapt(runnable, returnValue)` is like a `RecursiveTask` but the return value is hardcoded"
    ]
   },
   {
