--- a/java/Strings and Printing.ipynb
+++ b/java/Strings and Printing.ipynb
@@ -1163,6 +1163,7 @@
     "In this example, we create a StringBuilder object and perform various operations on it:\n",
     "- Appending strings using the `append()` method.\n",
     "- Inserting a string at a specific position using the `insert()` method.\n",
+    "  - keep in mind StringBuffer is like an array, not like a deque, so this may cost you\n",
     "- Replacing a portion of the string using the `replace()` method.\n",
     "- Deleting a portion of the string using the `delete()` method.\n",
     "- Reversing the string using the `reverse()` method.\n",
