Adding clarifications from my TODO list.

--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -747,7 +747,11 @@
    "id": "629aec3a",
    "metadata": {},
    "source": [
-    "# Promises"
+    "# Promises\n",
+    "\n",
+    "Note: `CompletableFuture` is a subclass of `Future`, and if you get a `Future` from an API, you can't call `thenApply` on it.  You can solve that by using `supplyAsync` and calling `get()` inside the body, making a new future that will block on the other future.\n",
+    "\n",
+    "Note: `CompletableFuture` has many more interesting methods to do even more different kinds of things."
    ]
   },
   {
@@ -2212,9 +2216,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2705149a",
+   "metadata": {},
+   "source": [
+    "# Virtual CPUs/Cores\n",
+    "\n",
+    "You can use `Runtime.getRuntime().availableProcessors()` to get the number of virtual cores.  For CPU-bound threads, you might use this as the number of threads in the thread pool."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9347b2a",
+   "id": "9ae6b634",
    "metadata": {},
    "outputs": [],
    "source": []
