Adding items from HackerRank practice.

--- a/java/Classes.ipynb
+++ b/java/Classes.ipynb
@@ -2908,6 +2908,7 @@
     "    - these two should always be done together\n",
     "    - utiliaze `Objects.hash()` on the member of the class to easily get a hash that is consistent with `Object.equals()`\n",
     "- implement `Comparable<T>` to support sorting and ordering\n",
+    "  - `a - b` is a comparison, not `a < b` (because need integer)\n",
     "- implement `toString()` for serialization and/or debugging"
    ]
   },
