--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -1742,6 +1742,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3ad3e5bf",
+   "metadata": {},
+   "source": [
+    "## Other Collectors Members\n",
+    "\n",
+    "- `<Map<TKey, List<TValue>> groupingBy(Function<TValue, TKey> classifier)`\n",
+    "    - create a dictionary of lists of values from the stream matching a classifier (the keys)\n",
+    "- `<Map<TKey, TTransformed> groupingBy(Function<TValue, TKey> classifier, Collector<TValue>)`\n",
+    "    - a way to further transform the lists into single values using collectors\n",
+    "- `partitioningBy` is like `groupingBy` but the key is a `Boolean` and it takes a `Predicate`\n",
+    "- `joining(delim)`, `joining(delim, prefix, suffix)`, `joining()`\n",
+    "    - for making string\n",
+    "- `maxBy(comparator)` and `minBy(comparator)` to get max and min values\n",
+    "- `summingInt(toIntFunction)` and similar\n",
+    "    - you provide mapping to primitives and then it sums for you"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4276ffcb",
    "metadata": {},
    "source": [
