Adding notes from reviewing Guice, etc.

--- a/java/Modules, Packages, Imports.ipynb
+++ b/java/Modules, Packages, Imports.ipynb
@@ -429,9 +429,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dcf4ceef",
+   "metadata": {},
+   "source": [
+    "# Statically Importing Enum Members\n",
+    "\n",
+    "Since members of an enum are public static final constants, you can import them like any other constants."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e6208201",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "METHOD\n"
+     ]
+    }
+   ],
+   "source": [
+    "import static java.lang.annotation.ElementType.*;\n",
+    "\n",
+    "class MyClass {\n",
+    "    public static void main() {\n",
+    "        System.out.println(METHOD);\n",
+    "    }\n",
+    "}\n",
+    "MyClass.main();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1625d64d",
+   "id": "0654c65f",
    "metadata": {},
    "outputs": [],
    "source": []
