--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -2226,9 +2226,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "46525ca1",
+   "metadata": {},
+   "source": [
+    "# Javax\n",
+    "\n",
+    "`javax` package is included with Java and represents __extensions__ to Java (\"Java X\").  It is not quite considered the standard library but also is officially maintained and shipped with the standard library.  You can see the documentation in the same place as the rest of the library as if it was part of it.\n",
+    "\n",
+    "Over time, many of the packages in `javax` are merged into the regular standard library, and the goal going forward is to put new things in `java` instead of using this as a temporary place.\n",
+    "\n",
+    "Examples of packages still in `javax` are:\n",
+    "- `javax.swing` for GUI applications\n",
+    "- `javax.tools` for compiler tools\n",
+    "- `javax.sql` for server-side SQL\n",
+    "- `javax.xml` for xml stuff\n",
+    "- `javax.imageio` for image processing\n",
+    "- `javax.crypto` for cryptography\n",
+    "- `javax.servlet` for writing servlets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d705e909",
+   "metadata": {},
+   "source": [
+    "## Swing\n",
+    "\n",
+    "`javax.swing` is a GUI framework for Java.\n",
+    "\n",
+    "It uses names like `JLabel` and `JButton` for GUI components.\n",
+    "\n",
+    "NOTE: this one __actually runs__ and pops up a window, but it kills the kernel when you close the window for some reason.  There is probably an exception that needs to be caught.\n",
+    "\n",
+    "NOTE: do not make the dumb mistake (as I did a couple of times) of confusing __Swing__ and __Spring__.  Spring is a 3rd party framework for things like microservices, cloud, reactive programming, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "103ec8fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import javax.swing.*;\n",
+    "\n",
+    "public class HelloWorldSwing {\n",
+    "    public static void main(String[] args) {\n",
+    "        // Ensure GUI creation runs on the Event Dispatch Thread\n",
+    "        SwingUtilities.invokeLater(() -> {\n",
+    "            JFrame frame = new JFrame(\"HelloWorldSwing\");\n",
+    "            frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);\n",
+    "            \n",
+    "            JLabel label = new JLabel(\"Hello, Swing!\");\n",
+    "            frame.getContentPane().add(label);\n",
+    "\n",
+    "            frame.pack();\n",
+    "            frame.setVisible(true);\n",
+    "        });\n",
+    "    }\n",
+    "}\n",
+    "HelloWorldSwing.main(null);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ae6b634",
+   "id": "3cba43e1",
    "metadata": {},
    "outputs": [],
    "source": []
