--- a/java/Decorators.ipynb
+++ b/java/Decorators.ipynb
@@ -230,9 +230,209 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eb6a5962",
+   "metadata": {},
+   "source": [
+    "# More Annotation Syntax\n",
+    "\n",
+    "Key Points:\n",
+    "- you have to import a lot of things to make it work\n",
+    "  - all from `java.lang.annotation`\n",
+    "    - enum value `java.lang.annotation.ElementType` for targets\n",
+    "- `@Target` below is taking an __array__ of enum values\n",
+    "  - Java allows you to ommit the `new ElementType[]` part for annotations\n",
+    "- `@Target` and `@Retention` are __meta-annotations__ (applied to annotations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6ec021c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// The necessary imports to make the code work\n",
+    "import java.lang.annotation.Retention;\n",
+    "import java.lang.annotation.RetentionPolicy;\n",
+    "import static java.lang.annotation.ElementType.FIELD;\n",
+    "import static java.lang.annotation.ElementType.METHOD;\n",
+    "import static java.lang.annotation.ElementType.PARAMETER;\n",
+    "import java.lang.annotation.Target;\n",
+    "\n",
+    "// Defining the annotation\n",
+    "@Target({ FIELD, PARAMETER, METHOD }) // Array of enum values\n",
+    "@Retention(RetentionPolicy.RUNTIME) // Keep at runtime for libraries\n",
+    "public @interface MyAnnotation {} // The actual name of the annotation\n",
+    "\n",
+    "class MyClass {\n",
+    "  @MyAnnotation int n; // I can use this here because of my @Retention\n",
+    "  // Anyone doing runtime reflection on MyClass will see that the variable\n",
+    "  // n has been annotated with this annotation.\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b448d7d",
+   "metadata": {},
+   "source": [
+    "# Annotations That Take Parameters\n",
+    "\n",
+    "Key Points:\n",
+    "- parameters are __methods of the interface__\n",
+    "- `default` is a special keyword for annotation methods that have default values\n",
+    "- never need `new Type[]` syntax for annotation arrays like in normal code\n",
+    "- annotations use __keyword arguments__ unlike methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "06b59f3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Defining the annotation\n",
+    "public @interface DemoAnnotation {\n",
+    "\n",
+    "    // #1: Default Values\n",
+    "    int number() default 5;\n",
+    "    \n",
+    "    String text() default \"defaultText\";\n",
+    "\n",
+    "    // Array attribute with default value\n",
+    "    int[] numberArray() default {2, 3};\n",
+    "\n",
+    "    // Array attribute without default value\n",
+    "    String[] textArray();\n",
+    "\n",
+    "    // #3: Array Syntax Simplification (shown in usage below)\n",
+    "    // When providing more than one value, you can omit the new TypeName[] syntax.\n",
+    "\n",
+    "    // #4: Single-Value Annotations\n",
+    "    // If this was the only element and named `value`, we could omit the name when using it.\n",
+    "    String value();\n",
+    "}\n",
+    "\n",
+    "// Using the annotation\n",
+    "\n",
+    "// Providing only the mandatory 'value' attribute. \n",
+    "// Others will take default values where provided.\n",
+    "@DemoAnnotation(value = \"singleValue\", textArray = {\"arrayItem1\", \"arrayItem2\"})\n",
+    "public class AnnotatedClass {\n",
+    "    //...\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b07629f",
+   "metadata": {},
+   "source": [
+    "# Annotation Restrictions\n",
+    "\n",
+    "- must take __constant value__ (which can include enum values)\n",
+    "- __no inheritance__ and __no generics__\n",
+    "- __no custom types__ (only certain types like String, numbers, and enum values allowed)\n",
+    "- __no exceptions__\n",
+    "- __no circular references__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1588be26",
+   "metadata": {},
+   "source": [
+    "# Single Parameter Annotation\n",
+    "\n",
+    "An annotation with a single field called `value` can ommit the name in the use of the annotation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "af1461b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public @interface SingleValueAnnotation {\n",
+    "    String value();  // This is named 'value'\n",
+    "}\n",
+    "\n",
+    "public @interface MultiValueAnnotation {\n",
+    "    String name();\n",
+    "    int age();\n",
+    "}\n",
+    "\n",
+    "// Using the annotations\n",
+    "\n",
+    "@SingleValueAnnotation(\"This is the value\") // No need to specify the element name\n",
+    "public class AnnotatedClass1 { }\n",
+    "\n",
+    "@MultiValueAnnotation(name = \"John\", age = 30) // Element names must be specified\n",
+    "public class AnnotatedClass2 { }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12e90fd8",
+   "metadata": {},
+   "source": [
+    "# Annotating Method Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "83caf576",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public @interface Logged {\n",
+    "    String value() default \"Logging this parameter\";\n",
+    "}\n",
+    "\n",
+    "public @interface MaxValue {\n",
+    "    int value();\n",
+    "}\n",
+    "\n",
+    "public class AnnotatedMethods {\n",
+    "\n",
+    "    public void greet(@Logged String message) {\n",
+    "        System.out.println(message);\n",
+    "    }\n",
+    "\n",
+    "    public void setLimit(@MaxValue(100) int limit) {\n",
+    "        System.out.println(\"Limit set to: \" + limit);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        AnnotatedMethods am = new AnnotatedMethods();\n",
+    "        am.greet(\"Hello, World!\");  // If a framework reads the @Logged annotation, it might log this parameter value.\n",
+    "        am.setLimit(50);            // If a framework reads the @MaxValue annotation, it might validate that the value is <= 100.\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c646bc6",
+   "metadata": {},
+   "source": [
+    "# Default Retention & Target\n",
+    "\n",
+    "If you don't provide these meta-annotations, the defaults are:\n",
+    "- `RetentionPolicy.CLASS` which means in the .class file but not at runtime\n",
+    "- __all targets__ allowed"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5eba816f",
+   "id": "a79b99d7",
    "metadata": {},
    "outputs": [],
    "source": []
