Adding more Guice and HTTP and Atomic info.

--- a/java/3rd Party Libraries.ipynb
+++ b/java/3rd Party Libraries.ipynb
@@ -1751,6 +1751,64 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ddee79fb",
+   "metadata": {},
+   "source": [
+    "## Injecting integer ID Example\n",
+    "\n",
+    "- primitive types can be injected and provided too\n",
+    "- mark the provider method and the injection point with the same annotation as shown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "77c5e5d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m@Retention(RetentionPolicy.RUNTIME)\u001b[0m",
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m@interface Unique {}\u001b[0m",
+      "\u001b[1m\u001b[31mUnresolved dependencies:\u001b[0m",
+      "\u001b[1m\u001b[31m   - class Retention\u001b[0m",
+      "\u001b[1m\u001b[31m   - variable RetentionPolicy\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "@Retention(RetentionPolicy.RUNTIME)\n",
+    "@interface Unique {}\n",
+    "\n",
+    "public class IdModule extneds AbstractModule {\n",
+    "    private final AtomicInteger counter = new AtomicInteger(10);\n",
+    "    \n",
+    "    @Override\n",
+    "    protected void configure() {\n",
+    "    }\n",
+    "    \n",
+    "    @Provides\n",
+    "    @Unique\n",
+    "    int provideUniqueId() {\n",
+    "        return counter.incrementAndGet();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class SomeService {\n",
+    "    private final int uniqueId;\n",
+    "    \n",
+    "    @Inject\n",
+    "    public SomeService(@Unique int uniqueId) {\n",
+    "        this.uniqueId = uniqueId;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b1fcea54",
    "metadata": {},
    "source": [
