--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -1181,6 +1181,73 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c787c244",
+   "metadata": {},
+   "source": [
+    "# Atomic Numbers\n",
+    "\n",
+    "`java.util.concurrent.atomic` has a few interesting things:\n",
+    "- `AtomicInteger`\n",
+    "- `AtomicDouble`\n",
+    "- `AtomicBoolean`\n",
+    "- `Atomic*Array`\n",
+    "- `AtomicReference<V>`\n",
+    "- `*Accumulator`\n",
+    "  - initialize with a reduction function and then pass in new values with `accumulate`\n",
+    "- `*Adder`\n",
+    "  - like an accumulator but default c'tor and just adds\n",
+    "  \n",
+    "Below are just a few examples of methods in `AtomicInteger` to give an idea of the flavor of the API.  Some common patterns:\n",
+    "- names like `getAndDoSomething` vs. `doSomethingAndGet` imply getting before or after a change\n",
+    "- a lot of operations are doubled up with getting and updating at the same time\n",
+    "- there are also methods like `updateAndGet` that takes a function to do an arbitrary equation or logic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "69e616a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "1\n",
+      "1\n",
+      "110\n",
+      "110.0\n",
+      "0\n",
+      "12104\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.concurrent.atomic.AtomicInteger;\n",
+    "\n",
+    "class AtomicIntegerDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        AtomicInteger x = new AtomicInteger(10);\n",
+    "        AtomicInteger y = new AtomicInteger();  // 0\n",
+    "\n",
+    "        System.out.println(x.get());\n",
+    "        System.out.println(y.incrementAndGet());\n",
+    "        System.out.println(y.getAndDecrement());\n",
+    "        System.out.println(x.addAndGet(100));\n",
+    "        \n",
+    "        System.out.println(x.floatValue());\n",
+    "        \n",
+    "        System.out.println(y.getAndSet(200));\n",
+    "        \n",
+    "        System.out.println(x.updateAndGet(n -> n * n + 4)); // also a getAndUpdate()\n",
+    "    }\n",
+    "}\n",
+    "AtomicIntegerDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d7aace04",
    "metadata": {},
    "source": [
