Clarifying that e can be lowercase in exp. literal

--- a/java/Variables.ipynb
+++ b/java/Variables.ipynb
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "d93a27cb",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
     "        double x1 = 1E9;\n",
     "        double x2 = 0.79E-9;\n",
     "        // double x3 = E9; // NO\n",
-    "        float x4 = 1E+9f;\n",
+    "        float x4 = 1e+9f;\n",
     "        \n",
     "        System.out.println(x1);\n",
     "        System.out.println(x2);\n",
