Adding new items from HackerRank Grid Search.

--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -1692,7 +1692,9 @@
     "6. Checking if two arrays are equal: The `Arrays.equals()` method is used to compare the equality of two arrays.\n",
     "7. Searching for an element in the array: The `Arrays.binarySearch()` method is used to find the index of an element in the sorted array.\n",
     "8. Comparing two arrays lexicographically: The `Arrays.compare()` method is used to compare two arrays lexicographically.\n",
-    "9. Checking if an array contains a specific element: The `Arrays.asList()` method is used to convert the array to a list, and then the `contains()` method is used to check if the list contains a specific element."
+    "9. Checking if an array contains a specific element: The `Arrays.asList()` method is used to convert the array to a list, and then the `contains()` method is used to check if the list contains a specific element.\n",
+    "\n",
+    "Note: a lot of the methods are overloaded for all the different primitive array types, which makes this a good place to learn when generic collection stuff doesn't work for a primitive array."
    ]
   },
   {
@@ -2158,7 +2160,9 @@
     "# Cloning\n",
     "\n",
     "- Just ues the __copy constructor__ for collection types.\n",
-    "- _Arrays_ have a __clone method__."
+    "- _Arrays_ have a __clone method__.\n",
+    "- To copy a subset of a list, use `subList` into a __copy constructor__.\n",
+    "- to copy a subset of an array, use `Arrays.copyOf()` and `Arrays.copyOfRange()`."
    ]
   },
   {
