--- a/java/Strings and Printing.ipynb
+++ b/java/Strings and Printing.ipynb
@@ -1426,9 +1426,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a58267be",
+   "metadata": {},
+   "source": [
+    "# Shared Memory and Copies\n",
+    "\n",
+    "While you might expect/hope methods like `s.substring()` to return a reference to the original string for efficiency, they actually __make a copy__.  The reason is that if you take a small portion of a huge string, and then only have the reference to the small portion, you don't want the huge string to stay loaded in memory.\n",
+    "\n",
+    "This applies to `StringBuilder` too since it returns a `String`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eabb9a39",
+   "metadata": {},
+   "source": [
+    "# String Constructors\n",
+    "\n",
+    "`String` has a lot of constructors for things like getting from char[], byte[], portions of arrays, StringBuffer, StringBuilder, etc."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3f080fc",
+   "id": "389cff07",
    "metadata": {},
    "outputs": [],
    "source": []
