--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -1935,9 +1935,379 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "142a93ff",
+   "metadata": {},
+   "source": [
+    "# String as Stream\n",
+    "\n",
+    "The `stream()` member of String lets you get an `IntStream` (because that's the next highest primitive one available) of the chars lazily.  This avoids the extra copy of doing `toCharArray()`.\n",
+    "\n",
+    "The example below gets a `Character[]` for the string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f7e61872",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[h, i,  , t, h, e, r, e]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.*;\n",
+    "import static java.util.stream.Collectors.*;\n",
+    "\n",
+    "class StringStreamDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        String s = \"hi there\";\n",
+    "        \n",
+    "        System.out.println(s.chars().mapToObj(c -> (char)c).collect(toList()));\n",
+    "    }\n",
+    "}\n",
+    "StringStreamDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc069222",
+   "metadata": {},
+   "source": [
+    "# Primitive Array as Stream\n",
+    "\n",
+    "Because `Stream.of()` has a problem with primitive arrays (due to being generic), `Arrays.stream()` has overloads for the 3 primitive stream types, in addition to a generic overload for other types.\n",
+    "\n",
+    "The 3 types included are: Int, Long, Double.\n",
+    "\n",
+    "An int[], long[], or double[] will trigger the proper overload of `Arrays.stream()` and get the corresponding `IntStream`, `LongStream`, or `DoubleStream` as appropriate.\n",
+    "\n",
+    "Note: all the `Arrays.stream()` overloads can also take two numbers to define a range to stream.\n",
+    "\n",
+    "Note: other Arrays members have more than these 3 overloads, but because there are only these 3 types of streams, it only uses those 3 types.\n",
+    "\n",
+    "Note: `Arrays.asList()` doesn't have such overloads because there is __no such thing__ as an `IntLis`t or similar.\n",
+    "\n",
+    "Note: for `char[]`, `float[]`, etc. you still have no way to pass it into a method to get a stream directly.  You'd have to use less direct means or a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "374b80b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.*;\n",
+    "import static java.util.stream.Collectors.*;\n",
+    "import java.util.Arrays;\n",
+    "\n",
+    "class PrimitiveStreamDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        int[] a = {1, 2, 3, 4, 5};\n",
+    "        IntStream s = Arrays.stream(a);\n",
+    "        \n",
+    "        System.out.println(Arrays.toString(s.toArray()));\n",
+    "    }\n",
+    "}\n",
+    "PrimitiveStreamDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08987b45",
+   "metadata": {},
+   "source": [
+    "# The 3 Primitives\n",
+    "\n",
+    "It's worth noting that in streams and in java.util.functional, the 3 primitive types considered are `int`, `long`, and `double`.  You usually need to go to the next bigger type if using others."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3663363",
+   "metadata": {},
+   "source": [
+    "# Primitive Stream Conversion Patterns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "38e7f96d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import java.util.stream.*;\n",
+    "import static java.util.stream.Collectors.*;\n",
+    "import java.util.Arrays;\n",
+    "import java.util.function.*;\n",
+    "\n",
+    "class PrimitiveStreamDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        int[] a = {1, 2, 3, 4, 5};\n",
+    "        IntStream s = Arrays.stream(a);\n",
+    "        \n",
+    "        // Direct conversion between primitive streams\n",
+    "        LongStream s2 = s.asLongStream(); // OK (upconversion)\n",
+    "        // IntStream s3 = s2.asIntStream();  // ERROR (not provided)\n",
+    "        \n",
+    "        // Downconversion between primitive streams\n",
+    "        LongStream s4 = Arrays.stream(a).asLongStream();\n",
+    "        IntStream s5 = s4.mapToInt(l -> (int)l);\n",
+    "        \n",
+    "        // Primitive Stream from Smaller Array Type\n",
+    "        short[] a2 = {1, 2, 3, 4, 5};\n",
+    "        IntStream a6 = IntStream.range(0, a2.length).map(i -> a2[i]);\n",
+    "        \n",
+    "        // Smaller array type from primitive stream\n",
+    "        // have to use FOR LOOP yourself\n",
+    "        \n",
+    "        // Boxing primitive\n",
+    "        Integer[] a7 = Arrays.stream(a).boxed().toArray(Integer[]::new);\n",
+    "        // Auto-boxing\n",
+    "        List<Integer> a8 = Arrays.stream(a).mapToObj(n -> n).collect(toList());\n",
+    "        // You can't use any variant of identity function to do that\n",
+    "        // List<Integer> a9 = Arrays.stream(a).mapToObj(UnaryOperator.<Integer>identity()).collect(toList());\n",
+    "        \n",
+    "        // Unboxing primitive\n",
+    "        int[] a10 = Stream.of(a7).mapToInt(Integer::intValue).toArray();\n",
+    "        \n",
+    "        // Unboxing to different size\n",
+    "        long[] a11 = Stream.of(a7).mapToLong(Integer::longValue).toArray();\n",
+    "        \n",
+    "        // Characters\n",
+    "        // not inherited from number and not part of that interface\n",
+    "        char[] a12 = {'a', 'b', 'c'};\n",
+    "        // not one of the 3 magic primitives, so you have to upcast it\n",
+    "        IntStream a13 = IntStream.range(0, a12.length).map(i -> a12[i]);\n",
+    "        // boxing to Character[]\n",
+    "        Character[] a14 = a13.mapToObj(n -> (char)n).toArray(Character[]::new);\n",
+    "        // Using string (inefficient)\n",
+    "        Character[] a15 = (new String(a12)).chars().mapToObj(n -> (char)n).toArray(Character[]::new);\n",
+    "    }\n",
+    "}\n",
+    "PrimitiveStreamDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "873e05b2",
+   "metadata": {},
+   "source": [
+    "# Array Conversion Patterns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "e3bb35ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import java.util.stream.*;\n",
+    "import static java.util.stream.Collectors.*;\n",
+    "import java.util.Arrays;\n",
+    "import java.util.function.*;\n",
+    "\n",
+    "class ArrayConversionDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        int[] intArr = {1, 2, 3, 4, 5};\n",
+    "        short[] shortArr = {1, 2, 3, 4, 5};\n",
+    "        long[] longArr = {1, 2, 3, 4, 5};\n",
+    "        \n",
+    "        // Primitive upcast from supported type\n",
+    "        long[] a1 = Arrays.stream(intArr).asLongStream().toArray();\n",
+    "        // Primitive upcast from unsupported type\n",
+    "        long[] a2 = IntStream.range(0, shortArr.length).mapToLong(i -> shortArr[i]).toArray();\n",
+    "        // Primitive downcast to supported type\n",
+    "        int[] a3 = Arrays.stream(longArr).mapToInt(n -> (int)n).toArray();\n",
+    "        // Primitive downcast to unsupported type\n",
+    "        // short[] a4 = Arrays.stream(intArr).boxed().map(n -> (short)n.intValue()).toArray(short[]::new); // NO\n",
+    "        // have to do a FOR LOOP\n",
+    "        \n",
+    "        // Box array\n",
+    "        Integer[] a5 = Arrays.stream(intArr).boxed().toArray(Integer[]::new);\n",
+    "        // Unbox array\n",
+    "        int[] a6 = Arrays.stream(a5).mapToInt(Integer::intValue).toArray();\n",
+    "        \n",
+    "        // Boxed Type Conversion\n",
+    "        // Once again, we rely on auto-boxing\n",
+    "        Long[] a7 = Stream.of(a5).map(Integer::longValue).toArray(Long[]::new);\n",
+    "    }\n",
+    "}\n",
+    "ArrayConversionDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b94bc8b1",
+   "metadata": {},
+   "source": [
+    "# Stream Equality"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "0c8b2536",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "true\n",
+      "true\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.*;\n",
+    "import static java.util.stream.Collectors.*;\n",
+    "import java.util.Arrays;\n",
+    "import java.util.function.*;\n",
+    "\n",
+    "class StreamEqualityDemo {\n",
+    "    static Stream<Integer> getNormalSequence() {\n",
+    "        return Stream.iterate(1, n -> n + 1).limit(100);\n",
+    "    }\n",
+    "    \n",
+    "    static Stream<Integer> getTransformedSequence() {\n",
+    "        return Stream.iterate(2, n -> n + 2).map(n -> n / 2).limit(100);\n",
+    "    }\n",
+    "    \n",
+    "    public static void main(String[] args) {\n",
+    "        // via list equality (extra copy but same big O)\n",
+    "        Stream<Integer> s1 = getNormalSequence();\n",
+    "        Stream<Integer> s2 = getTransformedSequence();\n",
+    "        \n",
+    "        System.out.println(s1.collect(toList()).equals(s2.collect(toList())));\n",
+    "        \n",
+    "        // via iterators\n",
+    "        s1 = getNormalSequence();\n",
+    "        s2 = getTransformedSequence();\n",
+    "        \n",
+    "        var iter1 = s1.iterator();\n",
+    "        var iter2 = s2.iterator();\n",
+    "        \n",
+    "        boolean res = true;\n",
+    "        while (iter1.hasNext() && iter2.hasNext()) {\n",
+    "            if (iter1.next() != iter2.next()) {\n",
+    "                res = false;\n",
+    "            }\n",
+    "        }\n",
+    "        if (iter1.hasNext() != iter2.hasNext()) {\n",
+    "            res = false;\n",
+    "        }\n",
+    "        \n",
+    "        System.out.println(res);\n",
+    "        \n",
+    "        // via zip\n",
+    "        s1 = getNormalSequence();\n",
+    "        s2 = getTransformedSequence();\n",
+    "        \n",
+    "        var iter3 = s1.iterator();\n",
+    "        var iter4 = s2.iterator();\n",
+    "        \n",
+    "        Stream<int[]> zipped = Stream.generate(() -> new int[] {iter1.hasNext() ? iter1.next() : -1,\n",
+    "                                                                iter2.hasNext() ? iter2.next() : -1})\n",
+    "                                     .limit(100);\n",
+    "        System.out.println(zipped.allMatch(a -> a[0] == a[1]));\n",
+    "    }\n",
+    "}\n",
+    "StreamEqualityDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54f1cf51",
+   "metadata": {},
+   "source": [
+    "# Matrix Slicing\n",
+    "\n",
+    "In the case of `List<List<>>`, the rows are copied, but the cells within the rows are references into the original rows.  You could do a map to deep copy the rows if want to change that.  That means the slice is in danger of being __invalidated__ by resizing the original!\n",
+    "\n",
+    "In the case of `List<String>`, since strings are immutable, it is already a deep copy (with the extra performance implications) from the beginning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "c22ad7d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before mods: [[5, 6], [8, 9]]\n",
+      "After mods: [[100, 6], [8, 9]]\n",
+      "Before mods: [56, 89]\n",
+      "After mods: [56, 89]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.*;\n",
+    "import java.util.function.*;\n",
+    "import java.util.stream.*;\n",
+    "\n",
+    "class MatrixDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        // List of lists\n",
+    "        List<List<Integer>> matrix = Arrays.asList(\n",
+    "            Arrays.asList(1, 2, 3),\n",
+    "            Arrays.asList(4, 5, 6),\n",
+    "            Arrays.asList(7, 8, 9)\n",
+    "        );\n",
+    "        \n",
+    "        List<List<Integer>> slice = matrix.subList(1, 3).stream().map(row -> row.subList(1, 3))\n",
+    "                                                        .collect(Collectors.toList());\n",
+    "                                                        \n",
+    "        System.out.println(\"Before mods: \" + slice);\n",
+    "        matrix.get(1).set(1, 100); // affects slice\n",
+    "        matrix.set(2, null); // doesn't affect slice\n",
+    "        System.out.println(\"After mods: \" + slice);\n",
+    "        \n",
+    "        // Multidimensional array\n",
+    "        // Since not able to do it transparently like C++, just make a wrapper\n",
+    "        \n",
+    "        // List of strings\n",
+    "        List<String> matrix2 = Arrays.asList(\n",
+    "            \"123\",\n",
+    "            \"456\",\n",
+    "            \"789\"\n",
+    "        );\n",
+    "        List<String> slice2 = matrix2.subList(1, 3).stream().map(row -> row.substring(1, 3))\n",
+    "                                                   .collect(Collectors.toList());\n",
+    "                                                   \n",
+    "        System.out.println(\"Before mods: \" + slice2);\n",
+    "        matrix.set(2, null); // doesn't affect slice\n",
+    "        System.out.println(\"After mods: \" + slice2);\n",
+    "    }\n",
+    "}\n",
+    "MatrixDemo.main(null);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6a5c1fe",
+   "id": "c314bfad",
    "metadata": {},
    "outputs": [],
    "source": []
