Adding info about Exception1 | Exception2 syntax.

--- a/java/Control Flow.ipynb
+++ b/java/Control Flow.ipynb
@@ -865,6 +865,63 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8376c200",
+   "metadata": {},
+   "source": [
+    "# Multiple Catch/Rethrow\n",
+    "\n",
+    "These are demonstrated together because they work out well that way."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6930d616",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f finally\n",
+      "main catch\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.io.IOException;\n",
+    "\n",
+    "class ExceptionDemo {\n",
+    "    // Compiler smart enough to know specific types rethrown\n",
+    "    static void f() throws IOException {\n",
+    "        try {\n",
+    "            throw new IOException();\n",
+    "        }\n",
+    "        // specifying two possible types to save duplicate code\n",
+    "        catch (IOException | IllegalArgumentException e) {\n",
+    "            throw e; // retrows the type it was to begin with\n",
+    "        }\n",
+    "        finally {\n",
+    "            // called after the catch but before rethrown\n",
+    "            System.out.println(\"f finally\");\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    public static void main(String[] args) {\n",
+    "        try {\n",
+    "            f();\n",
+    "        }\n",
+    "        catch (IOException e) {\n",
+    "            // Sees the rethrown value\n",
+    "            System.out.println(\"main catch\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "ExceptionDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "330128bb",
    "metadata": {},
    "source": [
