Adding note about mutability of static imports.

--- a/java/Modules, Packages, Imports.ipynb
+++ b/java/Modules, Packages, Imports.ipynb
@@ -464,9 +464,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "95c48832",
+   "metadata": {},
+   "source": [
+    "# Mutability of Static Imports\n",
+    "\n",
+    "In theory, you can import a static variable that is not final and then change it, without qualifying the class.  ChatGPT says this is the case.  I haven't tested it yet and haven't found official documentation.  It's hard to test in Jupyter, so I need to test in Intellij sometime.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0654c65f",
+   "id": "d1473e66",
    "metadata": {},
    "outputs": [],
    "source": []
