--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -2154,6 +2154,56 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3a54c5a6",
+   "metadata": {},
+   "source": [
+    "# Arrays.fill() and Arrays.setAll()\n",
+    "\n",
+    "`Arrays.fill` has overloads for all the primitive types and for subranges as well.\n",
+    "\n",
+    "`Arrays.setAll` only works for the 3 main primitive types (int, long, double) supported by functional interfaces, as well as generics.  It computes a function based on the index (not on the existing element)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2839a632",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Default integer array: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "Filled integer array: [0, 42, 42, 0, 0, 0, 0, 0, 0, 0]\n",
+      "Squared integer array: [0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Arrays;\n",
+    "\n",
+    "public class InitializationDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        // Specifying array size and getting default values\n",
+    "        int[] arr = new int[10];\n",
+    "        System.out.println(\"Default integer array: \" + Arrays.toString(arr));\n",
+    "        \n",
+    "        // Filling with non-default values\n",
+    "        Arrays.fill(arr, 1, 3, 42);\n",
+    "        System.out.println(\"Filled integer array: \" + Arrays.toString(arr));\n",
+    "        \n",
+    "        // Filling by generator\n",
+    "        Arrays.setAll(arr, x -> x * x);\n",
+    "        System.out.println(\"Squared integer array: \" + Arrays.toString(arr));\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "InitializationDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "61279e26",
    "metadata": {},
    "source": [
