Adding more notes from curious research.

--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -400,6 +400,67 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0ebab015",
+   "metadata": {},
+   "source": [
+    "# Generic Method Reference\n",
+    "\n",
+    "Some idiosynchratic things to note here:\n",
+    "- the method reference itself is the raw type if it's not bound\n",
+    "    - the type is actually erased when the method is invoked\n",
+    "- the usage of it (as in assigning to these variables) is how the compiler protects you\n",
+    "    - in this case, you had to use `ArrayList` instead of `List` in the `BiConsumer` so it would match.\n",
+    "    - but you could bind the type in the `BiConsumer`\n",
+    "- not using <Integer> on the LH side would trigger an unchecked warning\n",
+    "    - in the case of passing into a function, the context of the statement where the return value is used can link it all up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "4068eadc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.*;\n",
+    "import java.util.function.*;\n",
+    "\n",
+    "class GenericDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        Supplier<List<Integer>> supplier = ArrayList::new;\n",
+    "        BiConsumer<ArrayList<Integer>, Integer> adder = ArrayList::add;\n",
+    "        \n",
+    "        List<Integer> l = supplier.get();\n",
+    "        adder.accept((ArrayList<Integer>)l, Integer.valueOf(10));\n",
+    "        System.out.println(l);\n",
+    "    }\n",
+    "}\n",
+    "GenericDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2c0fd27",
+   "metadata": {},
+   "source": [
+    "# Inexact Output Types on Method References\n",
+    "\n",
+    "- in general, if a return type from a lambda/reference could be assigned to the type expected by a functional interface, it will be accepted\n",
+    "    - eg. autoboxing\n",
+    "    - eg. base class\n",
+    "- in addition, if a functional interface expects `void`, then a lambda/reference returning any type could be used there"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b00dae8c",
    "metadata": {},
    "source": [
@@ -1761,6 +1822,90 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b0a97b9f",
+   "metadata": {},
+   "source": [
+    "## More Custom collect() Behavior\n",
+    "\n",
+    "Even without implementing the `Collector<T>` interface, you can customize collection a bit with a `stream.collect()` overload.\n",
+    "\n",
+    "Remember you could always use your own lambdas!\n",
+    "\n",
+    "The parameters are:\n",
+    "1. a supplier to get a new instance of the thing to collect into (mutable)\n",
+    "1. a biconsumer to add a single item to the collection\n",
+    "1. a biconsumer to add all items from the same collection type to the other\n",
+    "    - this one is mostly used for parallel streams for merging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "d2b91a5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "12345\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.*;\n",
+    "import java.util.*;\n",
+    "\n",
+    "class CollectDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        // ArrayList example\n",
+    "        Stream<Integer> s = Stream.of(1, 2, 3, 4, 5);\n",
+    "        \n",
+    "        List<Integer> l = s.collect(ArrayList::new, ArrayList::add, ArrayList::addAll);\n",
+    "        System.out.println(l);\n",
+    "        \n",
+    "        // StringBuilder example\n",
+    "        s = Stream.of(1, 2, 3, 4, 5);\n",
+    "        System.out.println(s.collect(StringBuilder::new, StringBuilder::append, StringBuilder::append).toString());\n",
+    "    }\n",
+    "}\n",
+    "CollectDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f3bdbf9",
+   "metadata": {},
+   "source": [
+    "## Collect vs. Reduce\n",
+    "\n",
+    "The signatures are very similar, but with the following differences:\n",
+    "\n",
+    "- `reduce` returns back a value of the accumulator type instead of being assumed to mutate it\n",
+    "    - but mutation is allowed\n",
+    "    - for objects meant to be used fluently, like `StringBuilder`, this can be equivalent\n",
+    "        - for objects not designed that way, like `List`, it's not equivalent\n",
+    "- `collect` is only designed for mutability while `reduce` can operate either way"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a38a79c",
+   "metadata": {},
+   "source": [
+    "## Reduce Signatures\n",
+    "\n",
+    "- `reduce(supplier, biFunctionToAddFluently, binaryOperatorToCombine)`\n",
+    "    - a lot like `collect`\n",
+    "- `reduce(identityValue, binaryOperatorToCombine)`\n",
+    "    - simple version, works for things like summing\n",
+    "- `Optional<T> reduce(binaryOperatorToCombine)`\n",
+    "    - starts on 1st 2 items of sequence - empty optional if not enough"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4276ffcb",
    "metadata": {},
    "source": [
@@ -1936,7 +2081,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "142a93ff",
+   "id": "9ce5add8",
    "metadata": {},
    "source": [
     "# String as Stream\n",
@@ -1949,7 +2094,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f7e61872",
+   "id": "299bc7dd",
    "metadata": {},
    "outputs": [
     {
@@ -1976,7 +2121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc069222",
+   "id": "446c0d90",
    "metadata": {},
    "source": [
     "# Primitive Array as Stream\n",
@@ -1999,7 +2144,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "374b80b0",
+   "id": "f3c7b69c",
    "metadata": {},
    "outputs": [
     {
@@ -2028,7 +2173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08987b45",
+   "id": "170386ee",
    "metadata": {},
    "source": [
     "# The 3 Primitives\n",
@@ -2038,7 +2183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3663363",
+   "id": "5031f634",
    "metadata": {},
    "source": [
     "# Primitive Stream Conversion Patterns"
@@ -2047,7 +2192,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "38e7f96d",
+   "id": "6575d188",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2105,7 +2250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "873e05b2",
+   "id": "d53d151d",
    "metadata": {},
    "source": [
     "# Array Conversion Patterns"
@@ -2114,7 +2259,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "e3bb35ae",
+   "id": "ee5be7aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2154,7 +2299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b94bc8b1",
+   "id": "320b8fde",
    "metadata": {},
    "source": [
     "# Stream Equality"
@@ -2163,7 +2308,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "0c8b2536",
+   "id": "8bcdd23e",
    "metadata": {},
    "outputs": [
     {
@@ -2235,7 +2380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54f1cf51",
+   "id": "1f2b7799",
    "metadata": {},
    "source": [
     "# Matrix Slicing\n",
@@ -2248,7 +2393,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "c22ad7d5",
+   "id": "a0f4d9a1",
    "metadata": {},
    "outputs": [
     {
@@ -2307,7 +2452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c314bfad",
+   "id": "19eeb512",
    "metadata": {},
    "outputs": [],
    "source": []
