--- a/java/Strings and Printing.ipynb
+++ b/java/Strings and Printing.ipynb
@@ -461,6 +461,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4eb9ab71",
+   "metadata": {},
+   "source": [
+    "# StringBuilder Fluency\n",
+    "\n",
+    "`new StringBuilder().append(\"a\").append(\"b\").toString()`\n",
+    "\n",
+    "Methods that mutate the data return the object itself back as an output so that you can chain like this.  No copies are incurred."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "36387f48",
    "metadata": {},
    "source": [
@@ -1172,7 +1184,9 @@
     "- Setting the length of the string using the `setLength()` method.\n",
     "- Clearing the StringBuilder using the `setLength(0)` method.\n",
     "\n",
-    "Each operation is followed by a print statement to demonstrate the expected output."
+    "Each operation is followed by a print statement to demonstrate the expected output.\n",
+    "\n",
+    "Note: `append()` is overloaded for a lot of types."
    ]
   },
   {
@@ -1427,7 +1441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a58267be",
+   "id": "f0270d38",
    "metadata": {},
    "source": [
     "# Shared Memory and Copies\n",
@@ -1439,7 +1453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eabb9a39",
+   "id": "9b65339f",
    "metadata": {},
    "source": [
     "# String Constructors\n",
@@ -1450,7 +1464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "389cff07",
+   "id": "cbfd7004",
    "metadata": {},
    "outputs": [],
    "source": []
